# PDFDownloaderTest

./: .gitignore  Jenkinsfile  demo.py  excel_reader.py  file_saver.py  logger.py  main.py  pdf_downloader.py  pyproject.toml  readme.md  requirements.txt  test_excel_reader.py  todo
data/input/: Test_ark.xlsx  test.xlsx
src/PDFDownloader/: excel_reader.py  file_saver.py  logger.py  main.py  pdf_downloader.py  test_excel_reader.py
tests/integration/: test_excel_reader_with_file.py  test_file_saver_with_data.py  test_full_pipeline.py  test_pdf_downloader_with_url.py
tests/integration/test_files/: sample_excel_invalid_header.xlsx  sample_excel_no_row.xlsx  sample_excel_valid.xlsx
tests/unit/: test_excel_reader.py  test_file_saver.py  test_pdf_downloader.py
tests/unittests/: test_excel_reader.py
